toggle filter-wrap(has a bug that the map refreshes after filter-wrap toggle out)

--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -349,7 +349,8 @@ input[type="button" i], input[type="submit" i], input[type="reset" i], input[typ
     transition-duration: 300ms;
 }
 .filter-wrap{
-    background-color: rgba(240,240,240,0.9);
+    z-index: 20;
+    background-color: rgba(240,240,240,0.95);
     transform: translate3d(0,100%,0);
     -webkit-transform: translate3d(0,100%,0);
     -webkit-transition-duration: 250ms;
@@ -380,6 +381,17 @@ input[type="button" i], input[type="submit" i], input[type="reset" i], input[typ
     -moz-transition-duration: 250ms;
     -o-transition-duration: 250ms;
     transition-duration: 250ms;
+}
+
+.filter-wrap button{
+    position: absolute;
+    font-size: 1.2em;
+    bottom: 30px;
+    left: 0;
+    width: 90%;
+    margin: 0 5%;
+    border: 2px solid #d6d6d6;
+
 }
 #therapy_list{
     width: 100%;
@@ -615,7 +627,6 @@ div.my-divIcon:after {
     vertical-align: middle;
     text-align: center;
 }
-
 
 .register-wrap{
     position: absolute;
